Version 0.5.1.9000
XXXX-XX-XX
   - Typos and minor wording and formatting corrections (man pages and x.tds.in())
   - Bug fix in power.tsd.GS (regarding variable hw)
   - Bug in interim.tsd.in() w.r.t to power > target triggering
     futulity fixed (THX to mittyri).

Version 0.5-1 (belated easter egg)
2018-04-03
   - All functions xyz.2stage.ab() now have an alias xyz.tsd.ab(), e.g. instead
     of power.2stage.fC() one may use power.tsd.fC().
     The versions with .2stage. in their names will be removed in later versions.
   - The futility rule for a CI in power.2stage.GS() now based on 90% CI
     to be in line with the other functions using such a futility rule.
   - Default fCrit in power.2stage.GS() changed to "CI".
   - Added interim.2stage.in() and final.2stage.in() to perform interim and
     final analysis of 2 stage designs based on the Standard Combination or
     Maximum Combination Test (also includes a print class).
   - Update defaults of power.2stage.in() in order to be consistent with
     Paper from Maurer et al (2018).
   - Aliases power.tsd.xyz introduced (not public yet).
   - Experimental function power.tsd.2m() to deal with 2 PK metrics
     in the TSD decision scheme Potvin "B". Not public yet.
Version 0.4-6
2017-10-27
   - Updates of various man pages.
   - New function sampleN2.TOST() to estimate n2 in 2x2 and parallel designs
     based on df=n-3 for stage 2.
   - df for sample size re-estimation changed to n-3 for Potvin like TSD schemes
     (pooled evaluation with additionally stage term)
   - Same for power.2Stage.ssr().
   - Function power.2stage.in() to calculate the operational characteristics of
     TSDs evaluated via p-value combination using the inverse normal approach.
     Contributed by Benjamin Lang.
   - GitHub URL and bug reports URL added.
Version 0.4-5
2017-01-18
   - DOI for references in man pages added.
   - Bug in power.2stage.p() and power.2stage.pAF() removed which causes